# coffee-shop-crud

./: README.md  pyproject.toml
src/coffee_shop/: __main__.py  settings.py
src/coffee_shop/api/: deps.py  root.py
src/coffee_shop/api/rest/: test.py
src/coffee_shop/api/rest/auth/: controller.py  di.py  service.py
src/coffee_shop/api/rest/user/: controller.py
src/coffee_shop/api/websocket/: chat.py  connection_manager.py
src/coffee_shop/helpers/: openapi.py
src/coffee_shop/main/: routers.py  web.py
src/coffee_shop/repositories/: base.py  user.py
src/coffee_shop/schemas/errors/: http.py
src/coffee_shop/schemas/rest/: auth.py  user.py
src/coffee_shop/security/: jwt.py  password.py
src/coffee_shop/sqlalchemy_db/: base.py  di.py  init_models.py  session.py
src/coffee_shop/sqlalchemy_db/migrations/: env.py
src/coffee_shop/sqlalchemy_db/migrations/versions/: 5d92259d6aad_add_tables.py  6c8feac659fb_test.py
src/coffee_shop/sqlalchemy_db/models/: cart_item.py  category.py  order.py  order_item.py  product.py  test.py  user.py
